Add feed and entry

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ config/deploy.rb
 .idea
 # Ignore application configuration
 /config/application.yml
+
+# Ignore application configuration
+/config/application.yml
